Add some styling and start working on whiteboard

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,31 +1,18 @@
 @import "styles/colors";
 @import "styles/fonts";
 
+body,
 html {
   width: 100%;
   height: 100%;
 }
 
 body {
-  font-family: $font-family;
-  font-weight: $font-weight-regular;
-  color: $gray-dark;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
   margin: 0;
   overflow: hidden;
-}
-
-body {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  flex-flow: row wrap;
-  width: 100%;
-  height: 100%;
+  font-family: $font-family;
+  font-weight: $font-weight-regular;
+  background-color: $gray-dark;
 }
 
 #root {
