Bottom control bar

--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -12,3 +12,7 @@
   font-weight: $font-weight-regular;
   background-color: $gray-dark;
 }
+
+.vjs-has-started .vjs-control-bar {
+  position: fixed;
+}
