--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,8 +1,57 @@
-.loader-wrapper,
+@import "../styles/fonts";
+
 .error-wrapper,
+.loader-wrapper,
 .player-wrapper {
   display: flex;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
+.error-code,
+.loading-dots {
+  margin: auto;
+  text-align: center;
+  width: 100px;
+}
+
+.error-code {
+  color: white;
+  font-size: xxx-large;
+  font-weight: $font-weight-bold;
+}
+
+.loading-dots {
+  div {
+    animation: dots 1.4s infinite ease-in-out both;
+    background-color: white;
+    border-radius: 100%;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+  }
+
+  .first {
+    animation-delay: -0.32s;
+  }
+
+  .second {
+    animation-delay: -0.16s;
+  }
+
+  .third {
+    animation-delay: 0s;
+  }
+
+  @keyframes dots {
+    0%,
+    80%,
+    100% {
+      transform: scale(0);
+    }
+
+    40% {
+      transform: scale(1);
+    }
+  }
+}
