--- a/src/components/presentation/index.scss
+++ b/src/components/presentation/index.scss
@@ -8,20 +8,11 @@
 }
 
 .presentation {
-  display: flex;
-  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 svg {
   height: 100%;
   width: 100%;
-}
-
-.cursor {
-  background-color: red;
-  border-radius: 100%;
-  height: 10px;
-  opacity: .6;
-  position: absolute;
-  width: 10px;
 }
