--- a/src/components/screenshare/index.scss
+++ b/src/components/screenshare/index.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/fonts";
 
-.video-wrapper {
+.screenshare-wrapper {
   display: flex;
   width: 100%;
   height: 100%;
@@ -11,10 +11,4 @@
   font-family: $font-family;
   font-weight: $font-weight-regular;
   background-color: $gray-dark;
-}
-
-.video-js .vjs-big-play-button,
-.vjs-has-started .vjs-control-bar {
-  position: fixed;
-  z-index: 1;
 }
