--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,5 +1,13 @@
 .chat-wrapper {
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.chat {
   height: 100%;
   width: 100%;
 }
