--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,7 +1,7 @@
 $control-bar-height: 30px;
 
 $border-radius: 5px;
-$box-shadow-blur-radius: $border-radius;
+$box-shadow-blur-radius: 5px;
 
 $player-wrapper-padding: $control-bar-height;
 
