--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -9,6 +9,7 @@
   padding: calc(#{$thumbnails-wrapper-height} * 0.05);
   position: fixed;
   overflow-x: auto;
+  overflow-y: hidden;
   width: 100%;
   z-index: 1;
 }
