--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/fonts';
 @import 'src/styles/colors';
 
-$avatar: 2.25rem;
+$avatar-size: 2.25rem;
 $margin: .5rem;
 $margin-small: .15rem;
 $padding: .75rem;
@@ -32,9 +32,9 @@ $padding: .75rem;
 .avatar {
   border-radius: 50%;
   cursor: pointer;
-  height: $avatar;
+  height: $avatar-size;
   text-align: center;
-  width: $avatar;
+  width: $avatar-size;
 
   .initials {
     align-items: center;
