--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import 'src/styles/colors';
 @import 'src/styles/fonts';
+@import 'src/styles/sizes';
 
 body,
 html {
@@ -15,7 +16,62 @@ body {
   overflow: hidden;
 }
 
+header,
+section,
+main,
+footer {
+  height: 100%;
+  width: 100%;
+}
+
+header {
+  display: flex;
+  grid-area: header;
+}
+
+section {
+  background-color: $section-background-color;
+  display: flex;
+  grid-area: section;
+  flex-direction: column;
+
+  .top {
+    display: flex;
+    min-height: calc(#{$video-height} / 2);
+    width: 100%;
+  }
+
+  .bottom {
+    display: flex;
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+main {
+  display: none;
+  grid-area: main;
+
+  .content {
+    display: flex;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+footer {
+  display: flex;
+  grid-area: footer;
+}
+
 #root {
   height: 100%;
   width: 100%;
+}
+
+@media (min-width: $media-min-width) {
+  main {
+    display: flex;
+  }
 }
