--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,19 +1,20 @@
 @import 'src/styles/fonts';
 @import 'src/styles/colors';
+@import 'src/styles/sizes';
 
 $avatar-size: 2.25rem;
-$margin: .5rem;
-$margin-small: .15rem;
-$padding: .75rem;
 
 .chat-wrapper {
-  background-color: white;
+  bottom: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   font-size: small;
   padding: $padding;
+  position: absolute;
+  overflow-x: hidden;
   overflow-y: auto;
+  top: 0;
   width: 100%;
 }
 
