--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,9 +1,10 @@
 @import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
+$player-wrapper-padding: $control-bar-height;
+
 .error-wrapper,
-.loader-wrapper,
-.player-wrapper {
+.loader-wrapper {
   display: flex;
   height: 100%;
   width: 100%;
@@ -11,7 +12,15 @@
 
 .player-wrapper {
   box-sizing: border-box;
+  display: grid;
+  grid-template-areas:
+    "header"
+    "section"
+    "footer";
+  grid-template-rows: $header-height auto $footer-height;
+  height: 100%;
   padding: 0 0 $player-wrapper-padding 0;
+  width: 100%;
 }
 
 .error-code,
@@ -62,3 +71,15 @@
     }
   }
 }
+
+@media (min-width: $media-min-width) {
+  .player-wrapper {
+    grid-template-areas:
+      "section header"
+      "section main"
+      "section footer";
+    grid-template-columns: $section-width auto;
+  }
+}
+
+
