--- a/src/components/screenshare/index.scss
+++ b/src/components/screenshare/index.scss
@@ -1,5 +1,5 @@
-@import "src/styles/colors";
-@import "src/styles/fonts";
+@import 'src/styles/colors';
+@import 'src/styles/fonts';
 
 .screenshare-wrapper {
   display: flex;
