--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -1,16 +1,19 @@
-@import "src/styles/colors";
-@import "src/styles/fonts";
+@import 'src/styles/colors';
+@import 'src/styles/fonts';
+@import 'src/styles/sizes';
 
 .video-wrapper {
+  box-sizing: border-box;
   display: flex;
-  width: 100%;
   height: 100%;
+  padding: $padding-small;
+  width: 100%;
 }
 
 .video-js {
+  background-color: $section-background-color;
   font-family: $font-family;
   font-weight: $font-weight-regular;
-  background-color: $gray-dark;
 }
 
 .video-js .vjs-big-play-button,
