--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,10 +1,16 @@
 $control-bar-height: 30px;
+$media-min-width: 600px;
+
+$video-height: 480px;
+$video-width: 640px;
+
+$section-width: calc(#{$video-width} / 2);
+$header-height: 60px;
+$footer-height: 60px;
 
 $border-radius: 5px;
 $box-shadow-blur-radius: 5px;
-
-$player-wrapper-padding: $control-bar-height;
-
-$thumbnails-wrapper-bottom: $control-bar-height;
-$thumbnails-wrapper-height: 100px;
-
+$margin: .5rem;
+$margin-small: .15rem;
+$padding: .75rem;
+$padding-small: .5rem;
