--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -10,8 +10,11 @@
   width: 100%;
 }
 
-.video-js {
+.in-section {
   background-color: $section-background-color;
+}
+
+.video-js {
   font-family: $font-family;
   font-weight: $font-weight-regular;
 }
