--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,4 +12,8 @@ $blue-lightest: #e4ecf2;
 
 $box-shadow-color: $gray-light;
 
+$body-background-color: $gray-dark;
+$header-background-color: $gray-dark;
 $section-background-color: white;
+$main-background-color: $gray-dark;
+$footer-background-color: $gray-dark;
