--- a/src/components/presentation/index.scss
+++ b/src/components/presentation/index.scss
@@ -1,9 +1,12 @@
 .presentation-wrapper,
 .slide-wrapper {
   align-items: center;
+  bottom: 0;
   display: flex;
   justify-content: center;
   height: 100%;
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
