--- a/src/components/screenshare/index.scss
+++ b/src/components/screenshare/index.scss
@@ -1,14 +1,20 @@
 @import 'src/styles/colors';
 @import 'src/styles/fonts';
+@import 'src/styles/sizes';
 
 .screenshare-wrapper {
+  box-sizing: border-box;
   display: flex;
-  width: 100%;
   height: 100%;
+  padding: $padding-small;
+  width: 100%;
+}
+
+.in-main {
+  background-color: $main-background-color;
 }
 
 .video-js {
   font-family: $font-family;
   font-weight: $font-weight-regular;
-  background-color: $gray-dark;
 }
