--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-color: $gray-dark;
+  background-color: $body-background-color;
   font-family: $font-family;
   font-weight: $font-weight-regular;
   margin: 0;
@@ -25,8 +25,13 @@ footer {
 }
 
 header {
-  display: flex;
+  background-color: $header-background-color;
   grid-area: header;
+}
+
+footer {
+  background-color: $footer-background-color;
+  grid-area: footer;
 }
 
 section {
@@ -43,26 +48,53 @@ section {
 
   .bottom {
     display: flex;
-    position: relative;
     height: 100%;
+    position: relative;
     width: 100%;
   }
 }
 
 main {
+  background-color: $main-background-color;
   display: none;
   grid-area: main;
 
   .content {
     display: flex;
     height: 100%;
+    position: relative;
     width: 100%;
   }
 }
 
+header,
 footer {
   display: flex;
-  grid-area: footer;
+  box-sizing: border-box;
+  padding: 0 $padding-small;
+
+  .left,
+  .center,
+  .right {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    padding: $padding-small;
+    width: 100%;
+  }
+
+  .left {
+    justify-content: flex-start;
+  }
+
+  .center {
+    justify-content: center;
+  }
+
+  .right {
+    justify-content: flex-end;
+  }
 }
 
 #root {
