--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700&display=swap');
 
 $source-sans-pro: 'Source Sans Pro', sans-serif;
 
+$font-weight-extra-light: 200;
 $font-weight-regular: 400;
 $font-weight-bold: 700;
 
