Removing player update control

--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/colors';
 @import 'src/styles/sizes';
 
-$thumbnails-wrapper-bottom: $control-bar-height;
+$thumbnails-wrapper-bottom: 150px;
 $thumbnails-wrapper-height: 100px;
 
 .thumbnails-wrapper {
