Fixed presentation/screenshare switch

--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,6 @@ header {
 
   .title {
     color: white;
-    font-weight: $font-weight-extra-light;
     overflow: hidden;
     padding: $padding-small;
     text-overflow: ellipsis;
@@ -73,6 +72,10 @@ main {
     height: 100%;
     position: relative;
     width: 100%;
+
+    .inactive {
+      display: none;
+    }
   }
 }
 
