--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -11,10 +11,10 @@ $blue-light: #54a1f3;
 $blue-lighter: #92bcea;
 $blue-lightest: #e4ecf2;
 
-$box-shadow-color: $gray-light;
-
 $body-background-color: $gray-dark;
 $header-background-color: $gray-dark;
 $section-background-color: white;
 $main-background-color: $gray-dark;
 $footer-background-color: $gray-dark;
+
+$border-color: $gray-light;
