--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -8,8 +8,8 @@ $section-width: calc(#{$video-width} / 2);
 $header-height: 60px;
 $footer-height: 60px;
 
-$border-radius: 5px;
-$box-shadow-blur-radius: 5px;
+$border-radius: .35rem;
+$border-width: .20rem;
 $margin: .5rem;
 $margin-small: .15rem;
 $padding: .75rem;
