Chat auto-scroll

--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -14,6 +14,7 @@ $avatar-size: 2.25rem;
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
+  scroll-behavior: smooth;
   top: 0;
   width: 100%;
 }
