--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -46,7 +46,7 @@ $loading-dots-width: 20px;
     border-radius: 100%;
     display: inline-block;
     height: $loading-dots-height;
-    margin: $margin-small;
+    margin: $margin-extra-small;
     width: $loading-dots-width;
   }
 
