--- a/src/components/utils/index.scss
+++ b/src/components/utils/index.scss
@@ -1,8 +1,8 @@
 @import 'src/styles/fonts';
 @import 'src/styles/icons';
+@import 'src/styles/sizes';
 
 $button-size: 2.75rem;
-$margin: .5rem;
 
 .button-wrapper {
   display: flex;
