--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -11,6 +11,8 @@ $footer-height: 60px;
 $border-radius: .35rem;
 $border-width: .20rem;
 $margin: .5rem;
-$margin-small: .15rem;
+$margin-small: .35rem;
+$margin-extra-small: .15rem;
 $padding: .75rem;
 $padding-small: .5rem;
+$padding-extra-small: .25rem;
