--- a/src/components/presentation/index.scss
+++ b/src/components/presentation/index.scss
@@ -1,3 +1,7 @@
+@import 'src/styles/colors';
+
+$cursor-size: .5rem;
+
 .presentation-wrapper {
   align-items: center;
   bottom: 0;
@@ -15,6 +19,11 @@
 
   .area {
     clip-path: url(#clip);
+
+    .cursor {
+      fill: $red;
+      r: $cursor-size;
+    }
   }
 }
 
