--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -11,6 +11,8 @@ $blue-light: #54a1f3;
 $blue-lighter: #92bcea;
 $blue-lightest: #e4ecf2;
 
+$red: #df2721;
+
 $body-background-color: $gray-dark;
 $header-background-color: $gray-dark;
 $section-background-color: white;
