--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap');
 
 $source-sans-pro: 'Source Sans Pro', sans-serif;
 
+$font-weight-light: 300;
 $font-weight-regular: 400;
+$font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 
 $font-family: $source-sans-pro;
