--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,10 +1,12 @@
 $control-bar-height: 30px;
 $media-min-width: 600px;
+$media-max-height: 400px;
 
 $video-height: 480px;
 $video-width: 640px;
 
 $section-width: calc(#{$video-width} / 2);
+$section-width-small: calc((#{$video-width} / 8) * 3);
 $header-height: 60px;
 $footer-height: 60px;
 
