--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -3,6 +3,7 @@
 
 $thumbnails-wrapper-top: $header-height;
 $thumbnails-wrapper-bottom: calc(#{$control-bar-height} + #{$footer-height});
+$thumbnail-height: 90px;
 
 .thumbnails-wrapper {
   background-color: $blue-lighter;
@@ -25,9 +26,18 @@ $thumbnails-wrapper-bottom: calc(#{$control-bar-height} + #{$footer-height});
   }
 }
 
+.thumbnail-wrapper {
+  display: flex;
+  height: $thumbnail-height;
+  justify-content: center;
+  padding: 0 0 $padding-extra-small 0;
+}
+
 .thumbnail {
   cursor: pointer;
-  padding: 0 0 $padding-extra-small 0;
+  display: block;
+  height: 100%;
+  width: auto;
 
   &:hover {
     filter: opacity(50%);
