Always show the control bar

--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -27,6 +27,12 @@
   width: 100%;
 }
 
+:not(.vjs-has-started) .vjs-control-bar {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+}
+
 [class^="vjs-text-track-cue"] {
   inset: auto 0 calc(#{$control-bar-height} * 2) 0 !important;
   z-index: 2;
