Centralized spinner and swap button icon

--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -16,6 +16,7 @@
 .video-js .vjs-big-play-button,
 .vjs-has-started .vjs-control-bar,
 .vjs-text-track-display,
+.vjs-loading-spinner,
 .video-js .vjs-modal-dialog {
   position: fixed;
   z-index: 1;
