Scrollable lists adjusts

--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -32,7 +32,7 @@ $avatar-size: 2.25rem;
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: auto;
-  padding: $padding 0;
+  padding: $padding 0 0 0;
   position: absolute;
   scroll-behavior: smooth;
   top: 0;
