--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -11,7 +11,7 @@ $thumbnail-height: 90px;
   box-sizing: border-box;
   overflow-x: hidden;
   overflow-y: auto;
-  padding: $padding-extra-small;
+  padding: $padding-extra-small $padding-extra-small 0 $padding-extra-small;
   position: fixed;
   right: 0;
   scroll-behavior: smooth;
