--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -8,7 +8,7 @@ $video-width: 640px;
 $section-width: calc(#{$video-width} / 2);
 $section-width-small: calc((#{$video-width} / 8) * 3);
 
-$information-bar-height: 60px;
+$navigation-bar-height: 60px;
 $action-bar-height: 60px;
 
 $border-radius: .35rem;
